# aseconv

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html
.doctrees/: environment.pickle  index.doctree  modules.doctree  usage.doctree
.github/workflows/: documentation.yml  publish.yml  pypi-test.yml
_downloads/dc2c77605e92b91f21b869205c26eefd/: 1_nacl.in
_modules/: index.html
_modules/aseconv/: geoutil.html  main.html  pluginbase.html
_modules/aseconv/plugins/: ioaims.html  iolammps.html  iormg.html  plugAbasic.html  plugBkpath.html
_sources/: usage.rst.txt
docs/: Makefile
docs/source/: conf.py  index.rst  modules.rst  usage.rst
docs/source/_templates/autosummary/: base.rst  class.rst  module.rst
src/aseconv/: __init__.py  geoutil.py  main.py  pluginbase.py
src/aseconv/plugins/: __init__.py  _kpath2d.py  _kpathBZ.py  ioaims.py  iolammps.py  iormg.py  plugAbasic.py  plugBkpath.py
